fix transponder icon alignment and wrong vtx icon on active osd tab

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -860,6 +860,7 @@ li.active .ic_flasher {
 
 .ic_transponder {
     background-image: url(../images/icons/cf_icon_transponder_grey.svg);
+    background-position-y: 2px;
 }
 
 .ic_transponder:hover {
@@ -883,7 +884,7 @@ li.active .ic_transponder {
     background-image: url(../images/icons/cf_icon_vtx_grey.svg);
 }
 
-.ic_vtx:hover, li.active .ic_osd {
+.ic_vtx:hover, li.active .ic_vtx {
     background-image: url(../images/icons/cf_icon_vtx_white.svg);
 }
 
